# BBBC039

./: .gitignore  README.md  dataset_loader.ipynb  pyproject.toml  testing.ipynb
bbbc039/: api.ipynb  eval.py  preprocess.ipynb  randaugment.ipynb  train.py
bbbc039/dataset/: __init__.py  dataset.py  randaugment.py
bbbc039/examples/: image.tif
bbbc039/modules/: __init__.py  bbbc039.py  unetdla.py
code/: api.ipynb  dataset.py  eval.py  preprocess.ipynb  randaugment.ipynb  randaugment.py  train.sh  unet.py
code/examples/: image.tif
evaluation/: evaluation.py  test.py  testloader.py
report/: main.tex  refs.bib  structure.tex
report/sections/: abstract.tex  conclusion.tex  discussion.tex  introduction.tex  methods.tex  results.tex
src/BBBC039/: __init__.py  datamodule.py  dataset.py
