# pyproject.toml
#       laksdnalksdn
#

[tool.poetry]
name = "bbbc039"
version = "0.0.0"
description = "BBBC039 Nuclei Instance Segmentation: Analysis of U-Net DLA model performance and modified RandAugment hyperparameter tuning"
authors = ["Josh Bercich <joshbercich@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10.12,<3.13"
torch = "^2.1.0"
torchvision = "^0.16.0"
scikit-image = "^0.22.0"
lightning = "^2.1.0"
torchmetrics = "^1.2.0"
wandb = "^0.15.12"
numpy = "^1.25.2"
pandas = "^2.1.2"
tqdm = "^4.66.1"
opencv-python = "^4.8.1.78"
matplotlib = "^3.8.1"
seaborn = "^0.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
