# pyproject.toml
#       Project dependency management is done using `poetry` for easy installation and
#       controlling module consistency for the project source code. The project is not
#       any form of package and so distribution details are not important in this file
#       such as the version/authors/readme. All dependencies are defined under the one
#       depdency group to make it easy for any external usage of the repo.

# Usage
#       ```
#       $ pip install poetry
#       $ poetry install
#       $ poetry run python train.py
#       ```

[tool.poetry]
name = "bbbc039"
version = "0.0.0"
description = "BBBC039 Nuclei Instance Segmentation."
authors = ["Josh Bercich <joshbercich@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10.12,<3.13"
torch = "^2.1.0"
torchvision = "^0.16.0"
scikit-image = "^0.22.0"
lightning = "^2.1.2"
torchmetrics = "^1.3.1"
wandb = "^0.16.0"
numpy = "^1.26.2"
pandas = "^2.1.2"
tqdm = "^4.66.1"
opencv-python = "^4.8.1.78"
matplotlib = "^3.8.2"
seaborn = "^0.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
